Prep for storing userInfo
